[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Joe Kaufeld <opensource@joekaufeld.com>"]

[tool.poetry.dependencies]
python = "^3.10"
shiv = "^1.0.1"
httpx = "^0.23.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
poetry = "^1.1.14"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
"utils" = "src.cli:main"